--- a/public/styles.css
+++ b/public/styles.css
@@ -36,7 +36,7 @@ body {
 }
 
 header {
-  margin: 200px auto 0 auto;
+  margin: 180px auto 0 auto;
   font-family: "Avenir", "Verdana", "Helvetica", sans-serif;
   color: white;
   padding: 2rem;
@@ -58,10 +58,8 @@ h1 {
   color: white;
   font-weight: bold;
   background: transparent;
-  margin-top: 0.67em;
   border: 2px solid white;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0.67em auto;
   padding: 5px;
   border-radius: 20px;
   transition: all 0.1s;
@@ -79,6 +77,7 @@ h1 {
 .gobutton{
   width: 50px;
   margin-left: 10px;
+  margin-right: 10px;
 }
 
 form{
@@ -87,6 +86,8 @@ form{
   margin-right: auto;
   align-items: center;
   justify-content: center;
+  margin-bottom: 15px;
+  color: black !important;
 }
 
 input{
@@ -98,7 +99,7 @@ input{
   margin: 10px;
   height: 20px;
   width: 90%;
-  max-width: 300px;
+  max-width: 260px;
   border: 2px solid white;
   outline:none;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
