--- a/public/styles.css
+++ b/public/styles.css
@@ -1,23 +1,10 @@
-html{
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  margin: 0 auto;
-}
-
-div.tooltip {
-  position: absolute;
-  text-align: center;
-  width: 60px;
-  height: 35px;
-  padding: 2px;
-  font: 12px sans-serif;
-  background: black;
+body {
+  font-family: "Roboto", sans-serif;
   color: white;
-  border: 0px;
-  border-radius: 8px;
-  pointer-events: none;
+  display: block;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 #background {
@@ -31,32 +18,31 @@ div.tooltip {
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-
-}
-
-body {
-  font-family: "Avenir", Helvetica, sans-serif;
-  color: white;
-  display: block;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  background: linear-gradient(to bottom, #cedaed 0%,#afbbce 100%);
 
 }
 
 .contents{
   height: 100vh;
   background: rgba(0, 0, 50, 0.3);
+  background: linear-gradient(to bottom, #0f7fff 0%,#00c7ff 100%);
 }
 
 header {
   margin: 0 auto 0 auto;
-  font-family: "Avenir", "Verdana", "Helvetica", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: white;
   padding: 2rem;
   align-items: center;
   justify-content: center;
   text-align: center;
+}
+
+header .row{
+  align-items: center;
+  justify-content:center;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 h1 {
@@ -158,17 +144,80 @@ input[type="submit"]:hover {
     color: #222;
 }
 
-button {
 
+.makesubmissionbutton {
+  color: white;
+  font-weight: bold;
+  background: transparent;
+  margin-top: 0.67em;
+  border: 2px solid white;
+  width: 160px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px;
+  border-radius: 10px;
+  transition: all 0.1s;
 }
+
+.makesubmissionbutton:hover{
+  color: black;
+  background: white;
+}
+
+.backbutton {
+  color: black;
+  font-weight: bold;
+  background: transparent;
+  margin-top: 0.67em;
+  border: 2px solid black;
+  width: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px;
+  border-radius: 10px;
+  transition: all 0.1s;
+}
+
+.backbutton:hover{
+  color: white;
+  background: black;
+}
+
+
+.submitbutton {
+  color: black;
+  font-weight: bold;
+  background: transparent;
+  margin-top: 0.67em;
+  border: 2px solid black;
+  width: 160px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px;
+  border-radius: 10px;
+  transition: all 0.1s;
+}
+
+.submitbutton > a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.submitbutton > a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
+.submitbutton:hover{
+  color: white;
+  background: black;
+}
+
+
 
 @media screen and (max-width: 550px){
   #title{
     text-shadow: none;
-  }
-
-  .contents{
-    background: linear-gradient(to bottom, #0f7fff 0%,#00c7ff 100%);
   }
 
   #background{
