--- a/public/submissionform.css
+++ b/public/submissionform.css
@@ -1,16 +1,15 @@
 body {
-  font-family: "Avenir", Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
   color: white;
   display: block;
   align-items: center;
   justify-content: center;
   text-align: center;
-
 }
 
-.content{
+.form-content{
   background: rgba(255, 255, 255, 0.9);
-
+  height: 100vh;
 }
 
 #background {
@@ -24,20 +23,19 @@ body {
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: linear-gradient(to bottom, #cedaed 0%,#afbbce 100%);
+  background: white;
 
 }
 
 header {
-  font-family: "Avenir", "Verdana", "Helvetica", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: white;
   padding: 1rem auto;
   align-items: center;
   justify-content: center;
   text-align: center;
   background: white;
-  margin-bottom: 70px;
-  padding-bottom: 8px;
+  margin: 0 auto 40px auto;
 }
 
 header .row{
@@ -50,8 +48,14 @@ header .row{
 h1 {
   font-size: 3.5rem !important;
   color: black !important;
-  font-weight: 100;
   padding: 0.6rem 0;
+}
+
+.description{
+  width: 90%;
+  max-width: 800px;
+  margin: 0 auto;
+  font-family: "Roboto", sans-serif;
 }
 
 .makesubmissionbutton {
@@ -92,114 +96,93 @@ h1 {
   background: black;
 }
 
+.submitfield{
+  margin-top: 10px;
+  opacity: 0;
+}
 
-.submitbutton {
+.submitbutton, .yesbutton {
   color: black;
   font-weight: bold;
   background: transparent;
-  margin-top: 0.67em;
+  margin:0.2em;
   border: 2px solid black;
-  width: 160px;
-  margin-left: auto;
-  margin-right: auto;
+
   padding: 5px;
   border-radius: 10px;
   transition: all 0.1s;
 }
 
-.submitbutton > a {
-    color: inherit;
-    text-decoration: none;
-}
-
-.submitbutton > a:hover {
-    color: inherit;
-    text-decoration: none;
-}
-
-.submitbutton:hover{
+.submitbutton:hover, .yesbutton:hover{
   color: white;
   background: black;
 }
 
-.header form{
-  align-items: center;
-  justify-content: center;
-  color: black;
-  margin:0;
+.warningmessage{
+  margin-bottom:-10px;
+  color:#1098b7;
 }
 
 form{
   width: 90%;
   max-width: 800px;
-  margin: 4rem auto;
+  margin: 1rem auto;
+  font-family: "Roboto", sans-serif;
+  opacity: 0;
 }
 
-.content{
-  height: 100vh;
-}
-
-form h1{
+input{
+  background: none;
   color: black;
-}
-
-form input{
-    font-family: Helvetica;
-    background: white;
-    color: black;
-    padding: 20px 10px;
-    margin: 20px;
-    height: 20px;
-    width: 90%;
-    max-width: 500px;
-    border: none;
-    outline:none;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-    transition: all 0.2s;
-    border-radius: 20px;
-}
-
-header input{
-  border: 2px solid black !important;
-  box-shadow: none !important;
-}
-
-form select{
-  margin: 10px;
+  padding: 20px 10px;
+  margin: -10px auto 10px auto !important;
+  text-align: center;
+  height: 20px;
+  width: 90%;
+  max-width: 200px;
   border: none;
-  background: white;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+  outline:none;
+  transition: all 0.2s;
+  border-bottom: solid black 2px;
+}
+
+input:focus{
+    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 input::placeholder{
   color: rgba(0, 0, 0, 0.7);
 }
 
-input:hover{
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+form select{
+  margin: -10px auto 10px auto !important;
+  height: 30px;
+  background: none;
+  border-radius: 0;
+  border: solid black 2px;
+  width: 90%;
+  max-width: 200px;
+  text-align: center;
+}
+
+form label{
+  font-size: 2rem;
+  font-weight: 400;
+  margin-top: 20px;
+}
+
+.how{
+  opacity: 0;
 }
 
 datalist{
   border-radius: 10px;
 }
 
-input:focus{
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    background-color: white;
-}
-
-button {
-
-}
-
 @media screen and (max-width: 768px){
 
   header{
     display: block;
-  }
-
-  form input{
-    margin: 10px auto;
   }
 
   #enter_place{
@@ -230,28 +213,15 @@ button {
     background: white;
   }
 
-  .content{
-    background: white;
-  }
-
-  .submission input{
-    border: 2px solid black !important;
-    box-shadow: none !important;
-  }
-
-
   header{
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
-    background: linear-gradient(to bottom, #0f7fff 0%,#00c7ff 100%);
-
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
   }
 
-  header h1{
-    color: white !important;
+  body{
+    background: #effcfb;
   }
 
-  header input{
-    border: none !important;
+  #background{
+    visibility: hidden;
   }
-
 }
