--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif !important;
   color: white;
   display: block;
   align-items: center;
@@ -52,9 +52,10 @@ h1 {
 }
 
 .description{
+  text-align: left;
   width: 90%;
   max-width: 800px;
-  margin: 0 auto;
+  margin: 0 auto 10px auto;
   font-family: "Roboto", sans-serif;
 }
 
@@ -101,7 +102,7 @@ h1 {
   opacity: 0;
 }
 
-.submitbutton, .yesbutton, .yescampus, .nocampus {
+.submitbutton, .yesbutton, .yescampus, .skipbutton, #infobutton {
   color: black;
   font-weight: bold;
   background: transparent;
@@ -113,22 +114,42 @@ h1 {
   transition: all 0.1s;
 }
 
-.submitbutton:hover, .yesbutton:hover{
+.submitbutton:hover, .yesbutton:hover, .skipbutton:hover, #infobutton:hover{
   color: white;
   background: black;
 }
 
+#infobutton{
+  margin: 28px 10px 0 10px;
+  font-size: 1.5rem;
+  height: 35px;
+  opacity: 0.8;
+}
+
+#heading{
+  margin-left: auto;
+  margin-right: auto;
+  display: inline-flex;
+  text-align: center;
+}
+
 .warningmessage{
-  margin-bottom:-10px;
+  margin-bottom: -10px;
+  margin-top:-10px;
   color:#1098b7;
 }
 
 form{
+  visibility: hidden;
   width: 90%;
   max-width: 800px;
-  margin: 1rem auto;
+  margin: 0.5rem auto;
   font-family: "Roboto", sans-serif;
   opacity: 0;
+}
+
+.user_location_report{
+  margin-top: -10px;
 }
 
 input{
@@ -168,11 +189,17 @@ form select{
 form label{
   font-size: 2rem;
   font-weight: 400;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
-.how{
+#how{
   opacity: 0;
+}
+
+#invalid_location_message{
+  margin-top: -15px;
+  color: red;
+  visibility: hidden;
 }
 
 datalist{
