--- a/public/main.css
+++ b/public/main.css
@@ -118,7 +118,7 @@ h1 {
   opacity: 0;
 }
 
-.submitbutton, .yesbutton, .yescampus, .skipbutton, #daily, #weekly {
+.submitbutton, .yesbutton, .yescampus, .skipbutton, #daily, #weekly, .gotit {
   color: black;
   font-weight: bold;
   background: transparent;
@@ -130,18 +130,22 @@ h1 {
   transition: all 0.1s;
 }
 
-.submitbutton:hover, .yesbutton:hover, .skipbutton:hover, #daily:hover, #weekly:hover{
+.submitbutton:hover, .yesbutton:hover, .skipbutton:hover, #daily:hover, #weekly:hover, .gotit:hover{
   color: white;
   background: black;
 }
+.gotit{
+  margin: 10px auto;
+}
 
 #infobutton{
+  width: 30px;
   color: #2b72e5;
   font-weight: bold;
   background: transparent;
   padding: 5px;
   border: 1.5px solid #2b72e5;
-  border-radius: 10px;
+  border-radius: 20px;
   transition: all 0.1s;
   margin: 28px 10px 0 10px;
   font-size: 1.5rem;
