--- a/public/main.css
+++ b/public/main.css
@@ -8,8 +8,14 @@ body {
 }
 
 .form-content{
-  background: rgba(255, 255, 255, 0.95);
+  padding-top: 40px;
+  background: rgba(255, 255, 255, 0.9);
   height: 100vh;
+}
+
+.before-visualization{
+  visibility: hidden; display: none;
+
 }
 
 .sub-body{
@@ -51,7 +57,8 @@ header {
   justify-content: center;
   text-align: center;
   background: white;
-  margin: 0 auto 40px auto;
+  margin: 0 auto 0 auto;
+  box-shadow: 0 2px 4px black;
 }
 
 header .row{
@@ -173,7 +180,7 @@ h1 {
 }
 
 form{
-  visibility: hidden;
+  visibility: hidden; display: none;
   width: 90%;
   max-width: 800px;
   margin: 0.5rem auto;
@@ -237,7 +244,7 @@ form label{
 #invalid_location_message{
   margin-top: -15px;
   color: red !important;
-  visibility: hidden;
+  visibility: hidden; display: none;
 }
 
 datalist{
@@ -245,7 +252,7 @@ datalist{
 }
 
 .vis_options{
-  visibility: hidden;
+  visibility: hidden; display: none;
   border-top: 1px solid black;
   padding-top: 10px;
   margin-top: 10px;
@@ -290,15 +297,11 @@ datalist{
     background: white;
   }
 
-  header{
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-  }
-
   body{
     background: #effcfb;
   }
 
   #background{
-    visibility: hidden;
+    visibility: hidden; display: none;
   }
 }
