--- a/public/main.css
+++ b/public/main.css
@@ -9,7 +9,7 @@ body {
 
 .form-content{
   padding-top: 40px;
-  background: rgba(255, 255, 255, 0.9);
+  background: rgba(250, 250, 250, 0.9);
   height: 100vh;
 }
 
@@ -26,6 +26,7 @@ body {
 }
 
 #logo_text{
+  font-size: 2.5rem !important;
   margin: 10px 50px;
 }
 
@@ -145,23 +146,23 @@ h1 {
   margin: 10px auto;
 }
 
-#infobutton{
+.infobutton{
   width: 30px;
   color: #2b72e5;
   font-weight: bold;
   background: transparent;
-  padding: 5px;
+  padding: 5px 5px 7px 5px;
   border: 1.5px solid #2b72e5;
-  border-radius: 20px;
+  border-radius: 30px;
   transition: all 0.1s;
   margin: 28px 10px 0 10px;
   font-size: 1.5rem;
-  height: 33px;
+  height: 30px;
   opacity: 0.8;
   cursor: pointer;
 }
 
-#infobutton:hover{
+.infobutton:hover{
   color: white;
   background: #2b72e5;
 }
