--- a/public/main.css
+++ b/public/main.css
@@ -27,13 +27,30 @@ body {
 }
 
 #logo_text{
+  color: black !important;
   font-size: 2.5rem !important;
-  margin: 10px 50px;
+  margin: 10px 50px 0 50px;
+  
+}
+
+#logo_text > a{
+  color: black;
+  text-decoration: none !important;
+}
+
+
+#logo-text:hover{
+  cursor: pointer;
+}
+
+#tagline{
+  color: black;
 }
 
 #aboutlink{
   color: black !important;
   padding-top: 8px;
+  display: none;
 }
 
 #background {
