--- a/public/main.css
+++ b/public/main.css
@@ -295,6 +295,7 @@ datalist{
 }
 
 .card{
+  opacity: 0;
   position: absolute;
   width: 90%;
   padding: 2rem;
@@ -310,6 +311,7 @@ datalist{
 }
 
 #searchcard{
+  opacity: 0;
   display: flex !important;
   align-items: center;
   justify-content: center;
