--- a/public/main.css
+++ b/public/main.css
@@ -7,6 +7,11 @@ body {
   text-align: center;
 }
 
+h1, h2, h3{
+  font-family: "Avenir", "Roboto", sans-serif !important;
+  font-weight: bold;
+}
+
 .form-content{
   padding-top: 50px;
   background: rgba(250, 250, 250, 0.9);
@@ -43,9 +48,7 @@ body {
 }
 
 #tagline{
-  color: gray;
-  font-size: 1.2rem;
-  letter-spacing: 2px;
+  color: rgba(0, 0, 0, 0.6) !important;
   margin: auto 10px;
 }
 
@@ -182,19 +185,25 @@ h1 {
 }
 
 .infobutton{
-  width: 30px;
+  margin-left: 10px;
+  padding: 5px;
   color: #2b72e5;
   font-weight: bold;
   background: transparent;
-  padding: 5px 5px 7px 5px;
-  border: 1.5px solid #2b72e5;
-  border-radius: 30px;
-  transition: all 0.1s;
-  margin: 28px 10px 0 10px;
-  font-size: 1.5rem;
+  border: 2px solid #2b72e5;
   height: 30px;
+  width: 30px !important;
+  border-radius: 25px;
+  transition: all 0.1s;
+  font-size: 1.5rem;
   opacity: 0.8;
   cursor: pointer;
+}
+
+#loadingfan{
+  margin-right: 15px;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .infobutton:hover{
@@ -203,10 +212,15 @@ h1 {
 }
 
 #heading{
+  display: table;
   margin-left: auto;
   margin-right: auto;
-  display: inline-flex;
   text-align: center;
+}
+
+#help_us, #buttondiv{
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .warningmessage{
@@ -284,17 +298,44 @@ form label{
 }
 
 #locationdisclaimer{
-  margin-top: 2rem;
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1rem;
   font-size: 1.2rem;
   color: rgba(0, 0, 0, 0.5);
 }
 
 #more{
-  color: rgba(0, 0, 0, 0.8);
+  color: black;
+  padding-left: 5px;
+  cursor: pointer;
+}
+
+#enterdiv{
+  display: table-cell;
+  vertical-align: middle;
+  padding-left: 30px;
+}
+
+#firstheading{
+  display: table-cell;
+  vertical-align: middle;
+  font-size: 4rem !important;
+  padding-right: 30px;
+  text-align: right;
+  border-right: 1px solid rgba(0, 0, 0, 0.5);
+  width: 500px;
 }
 
 #enterbutton{
-  margin-top: 20vh;
+  font-size: 2rem;
+  height: 4rem;
+}
+
+#welcome{
+  display: table;
+  margin-top: calc(20vh + 70px);
 }
 
 datalist{
@@ -338,25 +379,11 @@ datalist{
   }
 }
 
-@media screen and (max-width: 768px){
-
-  header{
-    display: block;
-  }
-
-  #enter_place{
-    margin: 0 auto 0 auto;
-  }
-
-  #background{
-  }
-}
-
-h4{
-  font-size: 1.4rem !important;
-}
 
 @media screen and (max-width: 550px){
+  h1{
+    font-size: 2.5rem !important;
+  }
   body{
     background: #effcfb;
   }
@@ -367,18 +394,41 @@ h4{
   #background{
     visibility: hidden; display: none;
   }
+
 }
 
 @media screen and (max-width: 790px){
-  #logo-text{
-    margin-bottom: 5px !important;
+  h4{
+    font-size: 1.4rem !important;
   }
-  #aboutlink{
-    margin-top: -10px;
-    margin-bottom: 10px;
+
+  #welcome{
+    display: block;
   }
+
+  #enterdiv{
+    display: block;
+    padding-left: 0;
+  }
+
+  #firstheading{
+    display: block;
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 0;
+    text-align: center;
+  }
+
+  #firstheading{
+    width: 50vw;
+
+  }
+}
+
+@media only screen and (max-width: 705px){
   #tagline{
-    margin-top: 0;
+    display: none;
   }
 }
 
