--- a/public/main.css
+++ b/public/main.css
@@ -305,6 +305,7 @@ form label{
   width: 300px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 0;
   margin-top: 1rem;
   font-size: 1.2rem !important;
   color: rgba(0, 0, 0, 0.5) !important;
