--- a/public/main.css
+++ b/public/main.css
@@ -27,7 +27,6 @@ h3{
 
 .form-content{
   padding-top: 50px;
-  background: rgba(250, 250, 250, 0.9);
   height: 100vh;
 }
 
@@ -83,6 +82,7 @@ h3{
   position: fixed;
   top: 50%;
   left: 50%;
+  opacity: 0.1;
   min-width: 100%;
   min-height: 100%;
   width: auto;
@@ -90,8 +90,6 @@ h3{
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: white;
-
 }
 
 header {
